bindings/rust/src/bindings.rs

    #[doc = " Draws plain text using the currently active font.\n\n @param ui UI instance whose driver should draw the text. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Baseline position in pixels.\n @param str Borrowed NUL-terminated plain-text string to draw."]
    pub fn vision_ui_driver_str_draw(
        ui: *const vision_ui_t,
        x: u16,
        y: u16,
        str_: *const ::std::os::raw::c_char,
    );
    #[doc = " Draws UTF-8 text using the currently active font.\n\n @param ui UI instance whose driver should draw the text. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Baseline position in pixels.\n @param str Borrowed NUL-terminated UTF-8 string to draw."]
    pub fn vision_ui_driver_str_utf8_draw(
        ui: *const vision_ui_t,
        x: u16,
        y: u16,
        str_: *const ::std::os::raw::c_char,
    );
    #[doc = " Returns the rendered width of plain text.\n\n @param ui UI instance whose driver should measure the text. Must not be `NULL`.\n @param str Borrowed NUL-terminated plain-text string to measure.\n @return Width in pixels."]
    pub fn vision_ui_driver_str_width_get(
        ui: *const vision_ui_t,
        str_: *const ::std::os::raw::c_char,
    ) -> u16;
    #[doc = " Returns the rendered width of UTF-8 text.\n\n @param ui UI instance whose driver should measure the text. Must not be `NULL`.\n @param str Borrowed NUL-terminated UTF-8 string to measure.\n @return Width in pixels."]
    pub fn vision_ui_driver_str_utf8_width_get(
        ui: *const vision_ui_t,
        str_: *const ::std::os::raw::c_char,
    ) -> u16;
    #[doc = " Returns the current text height for the active font.\n\n @param ui UI instance whose driver should be queried. Must not be `NULL`.\n @return Text height in pixels for the active backend font."]
    pub fn vision_ui_driver_str_height_get(ui: *const vision_ui_t) -> u16;
    #[doc = " Draws a single pixel.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x X coordinate in pixels.\n @param y Y coordinate in pixels."]
    pub fn vision_ui_driver_pixel_draw(ui: *const vision_ui_t, x: u16, y: u16);
    #[doc = " Draws a circle outline.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Circle center X coordinate in pixels.\n @param y Circle center Y coordinate in pixels.\n @param r Circle radius in pixels."]
    pub fn vision_ui_driver_circle_draw(ui: *const vision_ui_t, x: u16, y: u16, r: u16);
    #[doc = " Draws a filled circle.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Circle center X coordinate in pixels.\n @param y Circle center Y coordinate in pixels.\n @param r Circle radius in pixels."]
    pub fn vision_ui_driver_disc_draw(ui: *const vision_ui_t, x: u16, y: u16, r: u16);
    #[doc = " Draws a rounded filled rectangle.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Top position in pixels.\n @param w Width in pixels.\n @param h Height in pixels.\n @param r Corner radius in pixels."]
    pub fn vision_ui_driver_box_r_draw(
        ui: *const vision_ui_t,
        x: u16,
        y: u16,
        w: u16,
        h: u16,
        r: u16,
    );
    #[doc = " Draws a filled rectangle.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Top position in pixels.\n @param w Width in pixels.\n @param h Height in pixels."]
    pub fn vision_ui_driver_box_draw(ui: *const vision_ui_t, x: u16, y: u16, w: u16, h: u16);
    #[doc = " Draws a rectangular outline.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Top position in pixels.\n @param w Width in pixels.\n @param h Height in pixels."]
    pub fn vision_ui_driver_frame_draw(ui: *const vision_ui_t, x: u16, y: u16, w: u16, h: u16);
    #[doc = " Draws a rounded rectangular outline.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Top position in pixels.\n @param w Width in pixels.\n @param h Height in pixels.\n @param r Corner radius in pixels."]
    pub fn vision_ui_driver_frame_r_draw(
        ui: *const vision_ui_t,
        x: u16,
        y: u16,
        w: u16,
        h: u16,
        r: u16,
    );
    #[doc = " Draws a horizontal line.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Y coordinate in pixels.\n @param l Length in pixels."]
    pub fn vision_ui_driver_line_h_draw(ui: *const vision_ui_t, x: u16, y: u16, l: u16);
    #[doc = " Draws a vertical line.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x X coordinate in pixels.\n @param y Top position in pixels.\n @param h Height in pixels."]
    pub fn vision_ui_driver_line_v_draw(ui: *const vision_ui_t, x: u16, y: u16, h: u16);
    #[doc = " Draws an arbitrary line segment.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x1 Start X coordinate in pixels.\n @param y1 Start Y coordinate in pixels.\n @param x2 End X coordinate in pixels.\n @param y2 End Y coordinate in pixels."]
    pub fn vision_ui_driver_line_draw(ui: *const vision_ui_t, x1: u16, y1: u16, x2: u16, y2: u16);
    #[doc = " Draws a dotted horizontal line.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Y coordinate in pixels.\n @param l Length in pixels."]
    pub fn vision_ui_driver_line_h_dotted_draw(ui: *const vision_ui_t, x: u16, y: u16, l: u16);
    #[doc = " Draws a dotted vertical line.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x X coordinate in pixels.\n @param y Top position in pixels.\n @param h Height in pixels."]
    pub fn vision_ui_driver_line_v_dotted_draw(ui: *const vision_ui_t, x: u16, y: u16, h: u16);
    #[doc = " Draws a monochrome bitmap.\n\n @param ui UI instance whose driver should draw. Must not be `NULL`.\n @param x Left position in pixels.\n @param y Top position in pixels.\n @param w Bitmap width in pixels.\n @param h Bitmap height in pixels.\n @param bit_map Borrowed bitmap data pointer. The pointed-to bitmap should remain valid for the duration of the draw\n call."]
    pub fn vision_ui_driver_bmp_draw(
        ui: *const vision_ui_t,
        x: u16,
        y: u16,
        w: u16,
        h: u16,
        bit_map: *const u8,
    );
    #[doc = " Changes the current draw color.\n\n @param ui UI instance whose driver state should change. Must not be `NULL`.\n @param color Backend-specific draw color value."]
    pub fn vision_ui_driver_color_draw(ui: *const vision_ui_t, color: u8);
    #[doc = " Changes the backend text drawing mode.\n\n @param ui UI instance whose driver state should change. Must not be `NULL`.\n @param mode Backend-specific text drawing mode."]
    pub fn vision_ui_driver_font_mode_set(ui: *const vision_ui_t, mode: u8);
    #[doc = " Changes the backend text direction.\n\n @param ui UI instance whose driver state should change. Must not be `NULL`.\n @param dir Backend-specific text direction value."]
    pub fn vision_ui_driver_font_direction_set(ui: *const vision_ui_t, dir: u8);
    #[doc = " Restricts drawing to a rectangular clip region.\n\n @param ui UI instance whose driver state should change. Must not be `NULL`.\n @param x0 Clip region start X coordinate.\n @param y0 Clip region start Y coordinate.\n @param x1 Clip region end X coordinate.\n @param y1 Clip region end Y coordinate."]
    pub fn vision_ui_driver_clip_window_set(
        ui: *const vision_ui_t,
        x0: i16,
        y0: i16,
        x1: i16,
        y1: i16,
    );
    #[doc = " Clears the current clip region.\n\n @param ui UI instance whose driver state should change. Must not be `NULL`."]
    pub fn vision_ui_driver_clip_window_reset(ui: *const vision_ui_t);
    #[doc = " Clears the full frame buffer.\n\n @param ui UI instance whose driver should clear the buffer. Must not be `NULL`."]
    pub fn vision_ui_driver_buffer_clear(ui: *const vision_ui_t);
    #[doc = " Presents the current frame buffer.\n\n @param ui UI instance whose driver should present the buffer. Must not be `NULL`."]
    pub fn vision_ui_driver_buffer_send(ui: *const vision_ui_t);
    #[doc = " Presents only a sub-rectangle of the frame buffer if the backend supports it.\n\n @param ui UI instance whose driver should present the buffer. Must not be `NULL`.\n @param x Left position of the dirty rectangle.\n @param y Top position of the dirty rectangle.\n @param w Width of the dirty rectangle.\n @param h Height of the dirty rectangle."]
    pub fn vision_ui_driver_buffer_area_send(
        ui: *const vision_ui_t,
        x: u16,
        y: u16,
        w: u16,
        h: u16,
    );
    #[doc = " Returns a readable pointer to the full-size frame buffer used by transition and blur effects.\n\n @param ui UI instance whose driver buffer should be queried. Must not be `NULL`.\n @return A pointer to the readable full-size frame buffer when the backend exposes one. Backends that cannot expose a\n readable full buffer may return `NULL` or another unusable pointer for transition/blur effects, in which case those\n effects are not fully supported.\n\n @attention this should be a full size buffer"]
    pub fn vision_ui_driver_buffer_pointer_get(
        ui: *const vision_ui_t,
    ) -> *mut ::std::os::raw::c_void;
    pub fn vision_ui_to_list_switch_item(
        list_item: *mut vision_ui_list_item_t,
    ) -> *mut vision_ui_switch_item_t;
    pub fn vision_ui_to_list_slider_item(
        list_item: *mut vision_ui_list_item_t,
    ) -> *mut vision_ui_slider_item_t;
    pub fn vision_ui_to_list_icon_item(
        list_item: *mut vision_ui_list_item_t,
    ) -> *mut vision_ui_icon_item_t;
    pub fn vision_ui_to_list_user_item(
        list_item: *mut vision_ui_list_item_t,
    ) -> *mut vision_ui_user_item_t;
    #[doc = " Creates a plain list container that can hold child items.\n\n @param ui UI instance whose allocator and ownership list should be used. Must not be `NULL`.\n @param capacity Maximum number of direct child items this list can hold.\n @param icon_mode Set to `true` to make this list accept icon-view children only.\n @param content Borrowed NUL-terminated label pointer stored on the item. The pointed-to string should remain valid\n while the item is in use.\n @return A non-`NULL` item on success, or `NULL` when allocating the item or its child array fails."]
    pub fn vision_ui_list_item_new(
        ui: *const vision_ui_t,
        capacity: usize,
        icon_mode: bool,
        content: *const ::std::os::raw::c_char,
    ) -> *mut vision_ui_list_item_t;
    #[doc = " Creates a non-interactive title row.\n\n @param ui UI instance whose allocator and ownership list should be used. Must not be `NULL`.\n @param title Borrowed NUL-terminated title string stored on the item. The pointed-to string should remain valid\n while the item is in use.\n @return A non-`NULL` item on success, or `NULL` when allocating the item fails."]
    pub fn vision_ui_list_title_item_new(
        ui: *const vision_ui_t,
        title: *const ::std::os::raw::c_char,
    ) -> *mut vision_ui_list_item_t;
